v4.9.0/_sources/generated/pcdsdevices.epics_motor.BeckhoffAxisPLC.rst.txt
pcdsdevices.epics\_motor.BeckhoffAxisPLC
========================================

.. currentmodule:: pcdsdevices.epics_motor

.. autoclass:: BeckhoffAxisPLC

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - status
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``sErrorMessage``
          - PLC error or warning
          - normal
          - 
    
        * - err_code
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``nErrorId``
          - Current NC error code
          - normal
          - 
    
        * - cmd_err_reset
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``bReset``
          - Command to reset an active error
          - normal
          - 
    
        * - cmd_home
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``bHomeCmd``
          - Start TwinCAT homing routine.
          - normal
          - 
    
        * - home_pos
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``fHomePosition``
          - Numeric position of home.
          - config
          - 
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    